fix horizontal scroll

--- a/_includes/css/_standard.scss
+++ b/_includes/css/_standard.scss
@@ -5,6 +5,7 @@
   }
   .row {
     padding: 50px 150px;
+    margin: 0;
   }
 
   h1 {
